# infinte-precision-calc

./: .gitignore  CMakeLists.txt
include/: bigfloat.hpp  bigint.hpp  utils.hpp
src/: bigfloat.cpp  bigint.cpp  main.cpp  utils.cpp
